blurred logo fix + navbar logo link fix

--- a/css/_theme.scss
+++ b/css/_theme.scss
@@ -118,7 +118,7 @@ header {
         .intro-text {
             .name {
                 img {
-                    width: 460px;
+                    width: 468px;
                 }
             }
             .skills {
