--- a/css/main.css
+++ b/css/main.css
@@ -6928,7 +6928,7 @@ header {
   header .container {
     padding: 200px 0 100px; }
   header .intro-text .name img {
-    width: 460px; }
+    width: 468px; }
   header .intro-text .skills {
     font-size: 1.75em; } }
 .navbar {
